--- a/html/contact.html
+++ b/html/contact.html
@@ -16,7 +16,7 @@
       href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styling/index.css" />
+    <link rel="stylesheet" href="../styling/contact.css" />
     <title>The Quirky Studio - Home</title>
     <style>
       ::-webkit-scrollbar {
@@ -50,10 +50,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-btns nav-link disabled btn text-white">Home</a>
+            <a class="nav-btns nav-link btn text-white" href="./index.html"
+              >Home</a
+            >
             <a class="nav-btns nav-link btn text-white" href="#">Products</a>
             <a class="nav-btns nav-link btn text-white" href="#">About</a>
-            <a class="nav-btns nav-link btn text-white" href="./contact.html"
+            <a class="nav-btns nav-link disabled btn text-white" href="#"
               >Contact</a
             >
             <a class="nav-btns nav-link btn text-white" href="#">Admin</a>
@@ -63,33 +65,64 @@
     </nav>
   </header>
 
-  <!-- End of Nav -->
+  <!-- end of nav -->
 
   <body>
-    <!-- Start of hero section -->
-    <div class="hero container-fluid">
-      <div class="landing">
-        <h1 class="hero-title">The Quirky Studio</h1>
-        <p class="hero-text">
-          Where your personality can be whatever you decide.
-        </p>
-      </div>
+    <h1 class="heading text-center">Contact Us</h1>
+    <div class="contact container-fluid">
+      <form action="https://formspree.io/f/xgebgwza" method="POST">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >First Name:</label
+          >
+          <input
+            name="name"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="John"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Last Name:</label
+          >
+          <input
+            name="name"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="Doe"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Email address:</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Leave a comment</label
+          >
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button type="submit" class="submit btn">Submit</button> <button type="reset" class="reset btn">Clear Form</button>
+        </div>
+      </form>
     </div>
-    <!-- End of hero section -->
-
-    <!-- Start of product display -->
-    <div>
-      <h3 class="sellers text-center">Best Sellers</h3>
-
-      <div id="product-display"></div>
-    </div>
-    <!-- End of product display -->
-
-    <script src="../script/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 
-  <!-- Start of Footer -->
+  <!-- start of footer -->
 
   <footer>
     <div class="footer">
