--- a/html/contact.html
+++ b/html/contact.html
@@ -54,7 +54,7 @@
               >Home</a
             >
             <a class="nav-btns nav-link btn text-white" href="#">Products</a>
-            <a class="nav-btns nav-link btn text-white" href="#">About</a>
+            <a class="nav-btns nav-link btn text-white" href="./about.html">About</a>
             <a class="nav-btns nav-link disabled btn text-white" href="#"
               >Contact</a
             >
@@ -95,7 +95,7 @@
         </div>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label"
-            >Email address:</label
+            >Email Address:</label
           >
           <input
             type="email"
