--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-btns nav-link disabled btn text-white">Home</a>
             <a class="nav-btns nav-link btn text-white" href="#">Products</a>
-            <a class="nav-btns nav-link btn text-white" href="#">About</a>
+            <a class="nav-btns nav-link btn text-white" href="./about.html">About</a>
             <a class="nav-btns nav-link btn text-white" href="./contact.html"
               >Contact</a
             >
