html contact update

--- a/html/about.html
+++ b/html/about.html
@@ -57,7 +57,7 @@
             <a class="nav-btns nav-link btn disabled text-white" href="#"
               >About</a
             >
-            <a class="nav-btns nav-link btn text-white" href="../html/about.html"
+            <a class="nav-btns nav-link btn text-white" href="../html/contact.html"
               >Contact</a
             >
             <a class="nav-btns nav-link btn text-white" href="#">Admin</a>
