--- a/html/products.html
+++ b/html/products.html
@@ -109,10 +109,10 @@
 
     <h3 class="heading text-center">Our Products</h3>
     <div class="filters container-fluid d-flex justify-content-center">
-      <button id="allBtn" class="filter-buttons btn">All</button>
-      <button id="animeBtn" class="filter-buttons btn">Anime</button>
-      <button id="horrorBtn" class="filter-buttons btn">Horror</button>
-      <button id="heroBtn" class="filter-buttons btn">Heroes and Villains</button>
+      <button id="allBtn" onclick="disAll()" class="filter-buttons btn">All</button>
+      <button id="animeBtn" onclick="disAnime()" class="filter-buttons btn">Anime</button>
+      <button id="horrorBtn" onclick="disHorror()" class="filter-buttons btn">Horror</button>
+      <button id="heroBtn" onclick="disHero()" class="filter-buttons btn">Heroes and Villains</button>
     </div>
     <div id="items"></div>
 
