--- a/html/admin.html
+++ b/html/admin.html
@@ -77,11 +77,11 @@
     <h3 class="heading text-center">Admin</h3>
     <div id="inputs">
       <label>Name: </label><input type="text" id="itemName"/> <label>Image: </label
-      ><input type="text" placeholder="Insert url" id="itemImg"/> <label>Price:</label
+      ><input type="url" placeholder="Insert url" id="itemImg"/> <label>Price:</label
       ><input type="number" id="itemPrice"/> <label>Category:</label><input type="text" id="itemCategory"/>
       <button class="addButton" onclick="addtoTable()"> Add</button>
     </div>
-
+    
     <div id="table"></div>
     <table>
         <thead>
