--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-btns nav-link disabled btn text-white">Home</a>
             <a class="nav-btns nav-link btn text-white" href="./html/products.html">Products</a>
-            <a class="nav-btns nav-link btn text-white" href="./about.html"
+            <a class="nav-btns nav-link btn text-white" href="./html/about.html"
               >About</a
             >
-            <a class="nav-btns nav-link btn text-white" href="./contact.html"
+            <a class="nav-btns nav-link btn text-white" href="./html/contact.html"
               >Contact</a
             >
-            <a class="nav-btns nav-link btn text-white" href="#">Admin</a>
+            <a class="nav-btns nav-link btn text-white" href="./html/admin.html">Admin</a>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
       <div class="landing">
         <h1 class="hero-title">The Quirky Studio</h1>
         <p class="hero-text">
-          Where your personality can be whatever you decide.
+          Where Imagination Meets Quirkiness.
         </p>
       </div>
     </div>
