--- a/html/contact.html
+++ b/html/contact.html
@@ -58,7 +58,7 @@
             <a class="nav-btns nav-link disabled btn text-white" href="#"
               >Contact</a
             >
-            <a class="nav-btns nav-link btn text-white" href="#">Admin</a>
+            <a class="nav-btns nav-link btn text-white" href="./admin.html">Admin</a>
           </div>
         </div>
       </div>
@@ -80,6 +80,7 @@
             class="form-control"
             id="exampleFormControlInput1"
             placeholder="John"
+            required
           />
         </div>
         <div class="mb-3">
@@ -91,6 +92,7 @@
             class="form-control"
             id="exampleFormControlInput1"
             placeholder="Doe"
+            required
           />
         </div>
         <div class="mb-3">
@@ -102,6 +104,7 @@
             class="form-control"
             id="exampleFormControlInput1"
             placeholder="name@example.com"
+            required
           />
         </div>
         <div class="mb-3">
@@ -112,9 +115,10 @@
             class="form-control"
             id="exampleFormControlTextarea1"
             rows="3"
+            required
           ></textarea>
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="buttons d-flex justify-content-center">
             <button type="submit" class="submit btn">Submit</button> <button type="reset" class="reset btn">Clear Form</button>
         </div>
       </form>
