--- a/html/products.html
+++ b/html/products.html
@@ -67,7 +67,7 @@
             <a class="nav-btns nav-link btn text-white" href="#">Admin</a>
             <button
               type="button"
-              class="btn"
+              class="btn cart-btn"
               data-bs-toggle="modal"
               data-bs-target="#myModal"
               id="cart-btn"
@@ -101,7 +101,7 @@
           <div id="cart-text"></div>
           <div class="modal-footer">
             <p><span id="total"></span></p>
-            <button class="btn" onclick="checkout()">Checkout</button>
+            <button class="checkout btn" onclick="checkout()">Checkout</button>
           </div>
         </div>
       </div>
