--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="./index.html">
+        <a class="navbar-brand text-white" href="../index.html">
           <img
             src="https://i.postimg.cc/P5X580xk/Black-And-White-Modern-Vintage-Retro-Brand-Logo.png"
             alt="Logo"
@@ -50,17 +50,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-btns nav-link btn text-white" href="./index.html"
+            <a class="nav-btns nav-link btn text-white" href="../index.html"
               >Home</a
             >
-            <a class="nav-btns nav-link btn text-white" href="../html/products.html">Products</a>
+            <a class="nav-btns nav-link btn text-white" href="./products.html"
+              >Products</a
+            >
             <a class="nav-btns nav-link btn disabled text-white" href="#"
               >About</a
             >
-            <a class="nav-btns nav-link btn text-white" href="../html/contact.html"
+            <a class="nav-btns nav-link btn text-white" href="./contact.html"
               >Contact</a
             >
-            <a class="nav-btns nav-link btn text-white" href="#">Admin</a>
+            <a class="nav-btns nav-link btn text-white" href="./admin.html"
+              >Admin</a
+            >
           </div>
         </div>
       </div>
@@ -80,17 +84,19 @@
           <img
             src="https://i.postimg.cc/1ts3jCbs/C12-Cheslyn-Herman-1.jpg"
             alt="Founder"
-            class="img-fluid"
+            class="img img-fluid"
           />
         </div>
         <div class="founder-text text-center">
           <h3>Meet Our Founder</h3>
           <br />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
-            doloribus quasi odit quia. Ea ad consequatur, odit minima quasi
-            impedit aspernatur delectus ipsum quod magnam, saepe debitis
-            asperiores nisi. Hic.
+            Meet Cheslyn, the founder behind The Quirky Studio, a captivating
+            costume store that brings fantasy to life. From a young age, Cheslyn
+            was enamored with the captivating worlds of anime, superhero movies
+            and horrors.Cheslyn transformed his lifelong love into a thriving
+            business, curating a treasure trove of meticulously crafted
+            costumes.
           </p>
         </div>
       </div>
@@ -101,15 +107,20 @@
       <div class="testimonial-cards row col-10">
         <div class="card" style="width: 18rem">
           <img
-            src="https://i.postimg.cc/RhP0XWmb/IMG-0286.jpg"
+            src="https://i.postimg.cc/44QMjKfs/a61e0923-3516-466d-8262-7d06676dbf76.jpg"
             class="card-img-top"
             alt="Taahirah"
           />
           <div class="card-body">
             <h5 class="card-title">Taahirah Ismail</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <cite
+                >"I've been a loyal customer of The Quirky Studio for years, and
+                they never disappoint. The costumes are unique and well-made,
+                and the prices are reasonable. The store has a great atmosphere,
+                and the staff goes above and beyond to ensure a fantastic
+                shopping experience."</cite
+              >
             </p>
           </div>
         </div>
@@ -122,8 +133,12 @@
           <div class="card-body">
             <h5 class="card-title">Luke Evertson</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <cite
+                >"The Quirky Studio is a hidden gem! The variety of costumes
+                available is impressive, ranging from classic to trendy options.
+                I always leave with an amazing costume and a smile on my
+                face."</cite
+              >
             </p>
           </div>
         </div>
@@ -136,50 +151,66 @@
           <div class="card-body">
             <h5 class="card-title">Lyle Brown</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <cite
+                >"I absolutely love shopping at The Quirky Studio! The selection
+                is incredible, and the quality of the costumes is top-notch. I
+                always find exactly what I'm looking for, and the staff is
+                friendly and helpful. Highly recommended!"</cite
+              >
             </p>
           </div>
         </div>
         <div class="card" style="width: 18rem">
           <img
-            src="https://i.postimg.cc/Gt5x6JnW/IMG-1834.jpg"
+            src="https://i.postimg.cc/YqXPqJLP/IMG-0310.jpg"
             class="card-img-top"
             alt="Ethan"
           />
           <div class="card-body">
             <h5 class="card-title">Ethan Lesar</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <cite
+                >"I cannot speak highly enough of The Quirky Studio. Their
+                attention to detail is remarkable, and the costumes are
+                authentic and true to the characters or themes they represent.
+                It's my go-to place for any costume event!"</cite
+              >
             </p>
           </div>
         </div>
         <div class="card" style="width: 18rem">
           <img
-            src="https://i.postimg.cc/13wWFwsB/IMG-20230222-141359-139.jpg"
+            src="https://i.postimg.cc/8Pk3G1cW/673e7e8d-254c-4c1f-9651-fd7f4d5b9e37.jpg"
             class="card-img-top"
             alt="Caryn"
           />
           <div class="card-body">
             <h5 class="card-title">Caryn Jane</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <cite
+                >"The Quirky Studio exceeded my expectations in every way. The
+                costumes are comfortable to wear and made with quality
+                materials. The customer service is exceptional, and they truly
+                care about customer satisfaction."</cite
+              >
             </p>
           </div>
         </div>
         <div class="card" style="width: 18rem">
           <img
-            src="https://i.postimg.cc/13wWFwsB/IMG-20230222-141359-139.jpg"
+            src="https://i.postimg.cc/GtK5Df7H/4d17b286-2338-4458-b799-5700b2b7b508.jpg"
             class="card-img-top"
-            alt="Caryn"
+            alt="Timothy"
           />
           <div class="card-body">
-            <h5 class="card-title">Caryn Jane</h5>
+            <h5 class="card-title">Timothy Barry</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <cite
+                >"I was thrilled with my experience at The Quirky Studio. The
+                staff was incredibly friendly and patient, helping me explore
+                different options and offering creative ideas. I will definitely
+                be back!"</cite
+              >
             </p>
           </div>
         </div>
@@ -199,8 +230,6 @@
         </ul>
       </div>
     </div>
-
-    <script src="../script/about.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 
