--- a/html/contact.html
+++ b/html/contact.html
@@ -53,12 +53,18 @@
             <a class="nav-btns nav-link btn text-white" href="../index.html"
               >Home</a
             >
-            <a class="nav-btns nav-link btn text-white" href="./products.html">Products</a>
-            <a class="nav-btns nav-link btn text-white" href="./about.html">About</a>
+            <a class="nav-btns nav-link btn text-white" href="./products.html"
+              >Products</a
+            >
+            <a class="nav-btns nav-link btn text-white" href="./about.html"
+              >About</a
+            >
             <a class="nav-btns nav-link disabled btn text-white" href="#"
               >Contact</a
             >
-            <a class="nav-btns nav-link btn text-white" href="./admin.html">Admin</a>
+            <a class="nav-btns nav-link btn text-white" href="./admin.html"
+              >Admin</a
+            >
           </div>
         </div>
       </div>
@@ -119,7 +125,8 @@
           ></textarea>
         </div>
         <div class="buttons d-flex justify-content-center">
-            <button type="submit" class="submit btn">Submit</button> <button type="reset" class="reset btn">Clear Form</button>
+          <button type="submit" class="submit btn">Submit</button>
+          <button type="reset" class="reset btn">Clear Form</button>
         </div>
       </form>
     </div>
