--- a/html/products.html
+++ b/html/products.html
@@ -50,9 +50,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a
-              class="nav-btns nav-link btn text-white"
-              href="../index.html"
+            <a class="nav-btns nav-link btn text-white" href="../index.html"
               >Home</a
             >
             <a class="nav-btns nav-link disabled btn text-white" href="#"
@@ -64,7 +62,9 @@
             <a class="nav-btns nav-link btn text-white" href="./contact.html"
               >Contact</a
             >
-            <a class="nav-btns nav-link btn text-white" href="#">Admin</a>
+            <a class="nav-btns nav-link btn text-white" href="./admin.html"
+              >Admin</a
+            >
             <button
               type="button"
               class="btn cart-btn"
