--- a/index.html
+++ b/index.html
@@ -51,14 +51,22 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-btns nav-link disabled btn text-white">Home</a>
-            <a class="nav-btns nav-link btn text-white" href="./html/products.html">Products</a>
+            <a
+              class="nav-btns nav-link btn text-white"
+              href="./html/products.html"
+              >Products</a
+            >
             <a class="nav-btns nav-link btn text-white" href="./html/about.html"
               >About</a
             >
-            <a class="nav-btns nav-link btn text-white" href="./html/contact.html"
+            <a
+              class="nav-btns nav-link btn text-white"
+              href="./html/contact.html"
               >Contact</a
             >
-            <a class="nav-btns nav-link btn text-white" href="./html/admin.html">Admin</a>
+            <a class="nav-btns nav-link btn text-white" href="./html/admin.html"
+              >Admin</a
+            >
           </div>
         </div>
       </div>
@@ -72,9 +80,7 @@
     <div class="hero container-fluid">
       <div class="landing">
         <h1 class="hero-title">The Quirky Studio</h1>
-        <p class="hero-text">
-          Where Imagination Meets Quirkiness.
-        </p>
+        <p class="hero-text">Where Imagination Meets Quirkiness.</p>
       </div>
     </div>
     <!-- End of hero section -->
