--- a/html/about.html
+++ b/html/about.html
@@ -79,7 +79,7 @@
     <div class="founder-section container-fluid">
       <h1 class="about-heading text-center">About The Quirky Studio</h1>
 
-      <div class="founder container-fluid d-flex justify-content-around">
+      <div class="container-fluid" id="founder">
         <div class="founder-img">
           <img
             src="https://i.postimg.cc/1ts3jCbs/C12-Cheslyn-Herman-1.jpg"
