--- a/html/admin.html
+++ b/html/admin.html
@@ -75,28 +75,28 @@
 
   <body>
     <h3 class="heading text-center">Admin</h3>
-      <div id="inputs">
-        <label>Name: </label><input type="text" id="itemName"/> <label>Image: </label
-        ><input type="url" placeholder="Insert url" id="itemImg"/> <label>Price:</label
-        ><input type="number" id="itemPrice"/> <label>Category:</label><input type="text" id="itemCategory"/>
-        <button class="addButton btn" onclick="addtoTable()">Add</button>
-      </div>
-      
-      <div id="table"></div>
-      <table>
-          <thead>
-              <tr>
-                  <th>Name</th>
-                  <th>Image</th>
-                  <th>Price</th>
-                  <th>Category</th>
-                  <th>Options</th>
-              </tr>
-          </thead>
-          <tbody id="admin-table">
-           
-          </tbody>
-      </table>
+    <div id="inputs">
+      <label>Name: </label><input type="text" id="itemName" />
+      <label>Image: </label
+      ><input type="url" placeholder="Insert url" id="itemImg" />
+      <label>Price:</label><input type="number" id="itemPrice" />
+      <label>Category:</label><input type="text" id="itemCategory" />
+      <button class="addButton btn" onclick="addtoTable()">Add</button>
+    </div>
+
+    <div id="table"></div>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Image</th>
+          <th>Price</th>
+          <th>Category</th>
+          <th>Options</th>
+        </tr>
+      </thead>
+      <tbody id="admin-table"></tbody>
+    </table>
     <script src="../script/admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
