more media queries

--- a/html/admin.html
+++ b/html/admin.html
@@ -89,7 +89,7 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Image</th>
+          <th class="img-head">Image</th>
           <th>Price</th>
           <th>Category</th>
           <th>Options</th>
